2005-09-30  David Wetzel <dave@turbocat.de>
        * GSWeb.framework/GSWDynamicURLString.m
        added dataUsingEncoding: allowLossyConversion:
        * GSWeb.framework/GSWRequest.m
        avoid cString (hint from David Ayers)

2005-05-16  David Ayers  <d.ayers@inode.at>

	* GSWAdaptors/common/GSWApp.h (GSWApp_New, GSWAppInfo_Init):
	Correct prototype.
	* GSWAdaptors/common/GSWConfig.h (GSWConfig_GetConfig)
	(GSWConfig_CanDumpStatus, GSWConfig_AddTimeHeaders)
	(GSWConfig_IsDebug, GSWConfig_IsReaden)
	(GSWConfig_GetConfigFilePath, GSWConfig_AdaptorBuilt)
	(GSWConfig_ServerStringInfo, g_szGSWeb_AdaptorStringInfo)
	(GSWConfig_ServerURL, g_szGSWeb_AdaptorURL): Ditto.
	* GSWAdaptors/common/GSWString.h (GSWString_New): Ditto.
	* GSWAdaptors/common/GSWUtil.h (GSWTime_now)
	(GSWUtil_ClearHostCache): Ditto.
	
	* GSWAdaptors/Apache/configure.ac: Only add to CPPFLAGS if
	ac_x_includes is set and only add LDFLAGS if ac_x_libraries
	set.  Refer to variables in consistent form.
	
2005-05-09  David Ayers  <d.ayers@inode.at>

	* GSWAdaptors/Apache/mod_gsweb.c: Rename GSWeb_Module to
	gsweb_module for apxs integration.
	* INSTALL: Refer to GSWAdaptors/Apache/INSTALL for Apache
	specific installation instructions.  Move Apache specific
	installation instructions to GSWAdaptors/Apache/INSTALL.
	* GSWAdaptors/Apache/INSTALL: Update to new ./configure
	usage and new install and httpdconfig make targets.
	* GSWAdaptors/Apache/GNUmakefile.in: New file to build
	the adaptor module with apxs and apr-config.
	* GSWAdaptors/Apache/configure[.ac]: New files
	* GSWAdaptors/Apache/config.guess: Ditto.
	* GSWAdaptors/Apache/config.sub: Ditto.
	* GSWAdaptors/Apache/install-sh: Ditto.
	
2005-05-04  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWUtils.h/m (GetTmpName): Remove unused
	function which generates warnings about tempnam usage.
	
2005-05-03  David Ayers  <d.ayers@inode.at>

	* GSWAdaptors/common/GSWStats.c (GSWStats_formatStats):